RESOLVED FIXED308571
REGRESSION(306469@main) [WebDriver] Fix browsing context state tracking after waitForNavigationToComplete returns WindowNotFound for frames
https://bugs.webkit.org/show_bug.cgi?id=308571
Summary REGRESSION(306469@main) [WebDriver] Fix browsing context state tracking after...
Lauro Moura
Reported 2026-02-24 12:16:17 PST
WebDriver::Session::waitForNavigationToComplete relies on Automation.json's waitForNavigationToComplete returning either WindowNotFound or FrameNotFound to update its internal state. After 306469@main, it now returns WindowNotFound also for non-existent frames. This causes WebDriver::Session to think that the whole window was closed, breaking ~40 tests, mostly "test_no_browsing_context" variants. Tentative patch incoming.
Attachments
Lauro Moura
Comment 1 2026-02-27 17:44:29 PST
EWS
Comment 2 2026-02-28 05:25:51 PST
Committed 308405@main (9d4b276bf129): <https://commits.webkit.org/308405@main> Reviewed commits have been landed. Closing PR #59625 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-02-28 05:26:12 PST
Note You need to log in before you can comment on or make changes to this bug.